serviceDetails half way done

--- a/hosting.html
+++ b/hosting.html
@@ -45,6 +45,46 @@
   </div>
 </header>
 <main>
+  <section class="hosting-hero">
+    <div class="container">
+      <h1>Профессиональный Хостинг</h1>
+      <div class="payment-period">
+        <span>Период оплаты</span>
+        <button class="payment-dates payment-date-active">Месяц</button>
+        <button class="payment-dates">Три месяца</button>
+        <button class="payment-dates">Полгода</button>
+        <button class="payment-dates">Год</button>
+      </div>
+      <div class="payment-boxes">
+        <div class="payment-box payment-box-simple">
+          <p>Виртуальный сервер</p>
+          <h3>simple</h3>
+          <span class="price">KGS 780.00</span>
+          <a href="">Заказать</a>
+        </div>
+        <div class="payment-box payment-box-advance">
+          <p>Виртуальный сервер</p>
+          <h3>ADVANCE</h3>
+          <span class="price">KGS 1150.00</span>
+          <a href="">Заказать</a>
+        </div>
+        <div class="payment-box payment-box-corporate">
+          <p>Виртуальный сервер</p>
+          <h3>CORPORATE</h3>
+          <span class="price">KGS 1840.00</span>
+          <a href="">Заказать</a>
+        </div>
+      </div>
+      <div class="services-types">
+        <a class="server services-type-active" href="">Виртуальный<br>сервер</a>
+        <a class="hosting" href="">Виртуальный<br>хостинг</a>
+        <a class="storage" href="">Внешнее FTP<br>хранилище</a>
+        <a class="ssl" href="">SSL сертификат</a>
+      </div>
+    </div>
+  </section>
+
+
   <section class="instructions">
     <div class="container">
       <h3>Пошаговая инструкция заказа:</h3>
@@ -121,5 +161,6 @@
 </script>
 <script src="js/language.js"></script>
 <script src="js/nav.js"></script>
+<script src="js/hosting.js"></script>
 </body>
 </html>
