--- a/hosting.html
+++ b/hosting.html
@@ -49,32 +49,44 @@
     <div class="container">
       <h1>Профессиональный Хостинг</h1>
       <div class="payment-period">
-        <span>Период оплаты</span>
-        <button class="payment-dates payment-date-active">Месяц</button>
-        <button class="payment-dates">Три месяца</button>
-        <button class="payment-dates">Полгода</button>
-        <button class="payment-dates">Год</button>
+        <div class="payment-dates-wrapper">
+          <span>Период оплаты</span>
+          <div class="payment-dates" data-period="1">
+            <button class="payment-date-active">Месяц</button>
+          </div>
+          <div class="payment-dates" data-period="3">
+            <button>Три месяца</button>
+          </div>
+          <div class="payment-dates" data-period="6">
+            <button>Полгода</button>
+          </div>
+          <div class="payment-dates" data-period="12">
+            <button>Год</button>
+          </div>
+        </div>
       </div>
+
       <div class="payment-boxes">
         <div class="payment-box payment-box-simple">
           <p>Виртуальный сервер</p>
           <h3>simple</h3>
-          <span class="price">KGS 780.00</span>
+          <span class="price" data-type="simple">KGS 780.00</span>
           <a href="">Заказать</a>
         </div>
         <div class="payment-box payment-box-advance">
           <p>Виртуальный сервер</p>
           <h3>ADVANCE</h3>
-          <span class="price">KGS 1150.00</span>
+          <span class="price" data-type="advance">KGS 1150.00</span>
           <a href="">Заказать</a>
         </div>
         <div class="payment-box payment-box-corporate">
           <p>Виртуальный сервер</p>
           <h3>CORPORATE</h3>
-          <span class="price">KGS 1840.00</span>
+          <span class="price" data-type="corporate">KGS 1840.00</span>
           <a href="">Заказать</a>
         </div>
       </div>
+
       <div class="services-types">
         <a class="server services-type-active" href="">Виртуальный<br>сервер</a>
         <a class="hosting" href="">Виртуальный<br>хостинг</a>
